--- a/package.json
+++ b/package.json
@@ -1,23 +1,36 @@
 {
   "name": "tlrl",
   "version": "1.0.0",
-  "description": "",
+  "description": "send to kindle",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel src --out-dir lib",
+    "prepublish": "in-publish && npm run build"
   },
-  "author": "",
+  "author": "Joe Moon <joe@xoxomoon.com>",
+  "repository": "git@github.com:sodiumjoe/tlrl.git",
   "license": "ISC",
+  "bin": {
+    "tlrl": "lib/index.js"
+  },
+  "files": [
+    "lib"
+  ],
   "devDependencies": {
+    "babel-cli": "^6.7.5",
     "babel-core": "^6.7.6",
     "babel-preset-es2015": "^6.6.0",
-    "babel-register": "^6.7.2"
+    "babel-register": "^6.7.2",
+    "eslint": "^2.7.0"
   },
   "dependencies": {
     "bluebird": "^3.3.4",
-    "eslint": "^2.7.0",
+    "in-publish": "^2.0.0",
     "inquirer": "^1.0.0",
     "lodash": "^4.9.0",
-    "twitter": "^1.2.5"
+    "request": "^2.70.0",
+    "twitter": "^1.2.5",
+    "yargs": "^4.6.0"
   }
 }
