--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 html5ever = "0.22"
+markup5ever = "0.7"
 image = "0.20"
 base64 = "0.9"
 dirs = "1.0"
